<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!--    CUERPO   -->
    <ImageView
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_climber"/>

    <TextView
        android:id="@+id/tvMallorcaClimb"
        style="@style/viewCustom"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:padding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/bg_borde_redondo_1dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:padding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/bg_borde_redondo_1dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:text="@string/login"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="login"
        android:background="@drawable/bg_btn_custom2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvOlvidoContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/forgotPassword"
            android:onClick="forgotPassword"
            android:textStyle="italic"
            tools:ignore="ObsoleteLayoutParam" />
        <TextView
            android:id="@+id/tvnuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/newUser"
            android:onClick="userNew"
            android:textAlignment="textEnd"
            android:textStyle="italic"
            tools:ignore="ObsoleteLayoutParam" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnSingGoogle"
        style="@style/viewCustom"
        android:text="@string/google"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/bg_btn_custom"
        android:drawablePadding="15dp"
        android:onClick="callLogInGoogle"
        app:drawableStartCompat="@drawable/google" />

    <TextView
        android:id="@+id/btnSingFacebook"
        style="@style/viewCustom"
        android:text="@string/facebook"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/bg_btn_custom"
        android:drawablePadding="15dp"
        android:onClick="callLogInFacebook"
        app:drawableStartCompat="@drawable/facebook" />

</LinearLayout>