<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <!--    CABECERA    -->
    <RelativeLayout
        style="@style/headerCustom">
        <View
            android:id="@+id/icon_header"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_flecha_atras"
            android:onClick="callMainActivity"/>
        <TextView
            style="@style/textHeaderCustom"
            android:layout_toEndOf="@+id/icon_header"
            android:layout_centerInParent="true"
            android:text="@string/bar_tittle_settings"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </RelativeLayout>
    <View
        android:id="@+id/linea_cabecera"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@color/black" />

    <!--    CUERPO  -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Este LinearLayout es contenedor global porque ScrollView solo puede tener un hijo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                style="@style/viewCustom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title1"
                    android:textSize="18sp"
                    android:paddingStart="35dp"
                    android:fontFamily="@font/architects_daughter" />
                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtitle1"
                    android:drawablePadding="20dp"
                    android:textSize="12sp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:onClick="callChangeVisibilityLinearLayout"
                    app:drawableEndCompat="@drawable/ic_flecha_abajo" />
                <LinearLayout
                    android:id="@+id/ly_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:padding="10dp"
                        android:hint="@string/settings_name"
                        android:textColor="@color/black"
                        android:background="@drawable/bg_borde_redondo_1dp"
                        android:textColorHint="@color/teal_200"
                        android:textSize="12sp"
                        android:layout_weight="0.7"/>
                    <TextView
                        android:id="@+id/btn_change_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/settings_button"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:onClick="callChangeName"
                        android:background="@drawable/bg_btn_custom2"
                        android:layout_weight="0.1" />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/black"/>
            </LinearLayout>
            <LinearLayout
                style="@style/viewCustom"
                android:orientation="vertical"
                android:onClick="callDownloadActivity">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title2"
                    android:textSize="18sp"
                    android:paddingStart="35dp"
                    android:fontFamily="@font/architects_daughter"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtitle2"
                    android:textSize="12sp"
                    android:paddingStart="55dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/black"/>
            </LinearLayout>
            <LinearLayout
                style="@style/viewCustom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title3"
                    android:textSize="18sp"
                    android:paddingStart="35dp"
                    android:fontFamily="@font/architects_daughter"/>
                <TextView
                    android:id="@+id/tv_lenguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtitle3"
                    android:drawablePadding="20dp"
                    android:drawableEnd="@drawable/ic_flecha_abajo"
                    android:textSize="12sp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:onClick="callChangeVisibilityLinearLayout"/>
                <LinearLayout
                    android:id="@+id/ly_lenguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rb_language1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_lenguage1"
                        android:textSize="12sp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp" />
                    <RadioButton
                        android:id="@+id/rb_language2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_lenguage2"
                        android:textSize="12sp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"/>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/black"/>
            </LinearLayout>
            <LinearLayout
                style="@style/viewCustom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title4"
                    android:textSize="18sp"
                    android:paddingStart="35dp"
                    android:fontFamily="@font/architects_daughter"/>
                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtitle4"
                    android:drawablePadding="20dp"
                    android:drawableEnd="@drawable/ic_flecha_abajo"
                    android:layout_marginBottom="5dp"
                    android:textSize="12sp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:onClick="callChangeVisibilityLinearLayout"/>
                <LinearLayout
                    android:id="@+id/ly_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/et_contact_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:layout_marginBottom="5dp"
                        android:padding="10dp"
                        android:hint="@string/settings_contact_info"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:background="@drawable/bg_borde_redondo_1dp"
                        android:textSize="12sp"
                        android:layout_weight="0.7"/>
                    <TextView
                        android:id="@+id/btn_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/settings_contact_button"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:onClick="callSendMailContact"
                        android:background="@drawable/bg_btn_custom2"
                        android:layout_weight="0.1" />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/black"/>
            </LinearLayout>
            <LinearLayout
                style="@style/viewCustom"
                android:orientation="vertical"
                android:onClick="callSignOut">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title5"
                    android:textSize="18sp"
                    android:paddingStart="35dp"
                    android:fontFamily="@font/architects_daughter"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtitle5"
                    android:textSize="12sp"
                    android:paddingStart="55dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/black"/>
            </LinearLayout>
            <LinearLayout
                style="@style/viewCustom"
                android:orientation="vertical"
                android:onClick="callDeleteAccount">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title6"
                    android:textSize="18sp"
                    android:paddingStart="35dp"
                    android:fontFamily="@font/architects_daughter"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtitle6"
                    android:textSize="12sp"
                    android:paddingStart="55dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




    <!--


        -->



</LinearLayout>